Unit test of Views & Queries Add of NewtonsoftJsonSerializer

--- a/MvvX.CouchBaseLite/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
+++ b/MvvX.CouchBaseLite/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Documents\IDocument.cs" />
     <Compile Include="Database\IDatabase.cs" />
     <Compile Include="IndexUpdateMode.cs" />
+    <Compile Include="Managers\IJsonSerializer.cs" />
+    <Compile Include="Managers\JsonSerializationSettings.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\ILiveQuery.cs" />
