--- a/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
+++ b/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
@@ -38,7 +38,7 @@
   <ItemGroup>
     <Compile Include="CouchbaseLiteConcurrentException.cs" />
     <Compile Include="CouchbaseLiteException.cs" />
-    <Compile Include="Database\DatabaseChangeEventArgs.cs" />
+    <Compile Include="Database\IDatabaseChangeEventArgs.cs" />
     <Compile Include="Database\IDatabaseOptions.cs" />
     <Compile Include="Documents\IAttachment.cs" />
     <Compile Include="Documents\IDocumentChange.cs" />
@@ -63,6 +63,8 @@
     <Compile Include="Queries\QueryAllDocsMode.cs" />
     <Compile Include="Storages\StorageTypes.cs" />
     <Compile Include="Store\SymmetricKeyType.cs" />
+    <Compile Include="Sync\ReplicationChangeEventArgs.cs" />
+    <Compile Include="Sync\IReplication.cs" />
     <Compile Include="Views\Delegates.cs" />
     <Compile Include="Views\IView.cs" />
   </ItemGroup>
