Add new comments Remove ForestDb (obsolete) Upgrade to 1.4.1

--- a/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
+++ b/MvvX.Plugins.CouchBaseLite/MvvX.Plugins.CouchBaseLite.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Queries\IQueryEnumerator.cs" />
     <Compile Include="Queries\IQueryRow.cs" />
     <Compile Include="Queries\QueryAllDocsMode.cs" />
+    <Compile Include="ReplicationStatus.cs" />
     <Compile Include="Storages\StorageTypes.cs" />
     <Compile Include="Store\SymmetricKeyType.cs" />
     <Compile Include="Sync\ReplicationChangeEventArgs.cs" />
